Ticket 11: Support configuration from files: web-server.properties and web-server.xml. + Tests